cap 与系统信息
